@@ -1,9 +1,10 @@
-package cyclops.streams.push;
+package cyclops.streams.push.reactivestreamspath;
 
 import com.aol.cyclops2.util.SimpleTimer;
 import cyclops.collections.ListX;
 import cyclops.stream.ReactiveSeq;
 import cyclops.stream.Spouts;
+import cyclops.stream.Streamable;
 import lombok.Value;
 import org.junit.Test;
 
@@ -12,54 +13,54 @@ import java.util.*;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 
-import static cyclops.stream.Spouts.*;
+import static cyclops.stream.Spouts.iterate;
+import static cyclops.stream.Spouts.of;
 import static org.hamcrest.Matchers.*;
 import static org.junit.Assert.assertThat;
 import static org.junit.Assert.assertTrue;
 
-public class BatchingTest {
+public class BatchingRSTest {
    
 	@Test
 	public void batchUntil(){
 		assertThat(Spouts.of(1,2,3,4,5,6)
 				.groupedUntil(i->i%3==0)
-				.toList().size(),equalTo(2));
+				.to(Streamable::fromStream).toList().size(),equalTo(2));
 		assertThat(Spouts.of(1,2,3,4,5,6)
 				.groupedUntil(i->i%3==0)
-				.toList().get(0),equalTo(Arrays.asList(1,2,3)));
+				.to(Streamable::fromStream).toList().get(0),equalTo(Arrays.asList(1,2,3)));
 	}
 	@Test
 	public void batchWhile(){
 		assertThat(Spouts.of(1,2,3,4,5,6)
 				.groupedWhile(i->i%3!=0)
-				.toList()
+				.to(Streamable::fromStream).toList()
 				.size(),equalTo(2));
 		assertThat(Spouts.of(1,2,3,4,5,6)
 				.groupedWhile(i->i%3!=0)
-				.toList(),equalTo(Arrays.asList(Arrays.asList(1,2,3),Arrays.asList(4,5,6))));
+				.to(Streamable::fromStream).toList(),equalTo(Arrays.asList(Arrays.asList(1,2,3),Arrays.asList(4,5,6))));
 	}
 	@Test
 	public void batchUntilCollection(){
 		assertThat(Spouts.of(1,2,3,4,5,6)
 				.groupedUntil(i->i%3==0,()->new ArrayList<>())
-				.toList().size(),equalTo(2));
+				.to(Streamable::fromStream).toList().size(),equalTo(2));
 		assertThat(Spouts.of(1,2,3,4,5,6)
 				.groupedUntil(i->i%3==0,()->new ArrayList<>())
-				.toList().get(0),equalTo(Arrays.asList(1,2,3)));
+				.to(Streamable::fromStream).toList().get(0),equalTo(Arrays.asList(1,2,3)));
 	}
 	@Test
 	public void batchWhileCollection(){
 		System.out.println("*"+Spouts.of(1,2,3,4,5,6)
 				.groupedWhile(i->i%3!=0,()->new ArrayList<>())
-				.toList());
+				.to(Streamable::fromStream).toList());
 		assertThat(Spouts.of(1,2,3,4,5,6)
 				.groupedWhile(i->i%3!=0,()->new ArrayList<>())
-				.toList().size(),equalTo(2));
+				.to(Streamable::fromStream).toList().size(),equalTo(2));
 		assertThat(Spouts.of(1,2,3,4,5,6)
 				.groupedWhile(i->i%3!=0,()->new ArrayList<>())
-				.toList(),equalTo(Arrays.asList(Arrays.asList(1,2,3),Arrays.asList(4,5,6))));
+				.to(Streamable::fromStream).toList(),equalTo(Arrays.asList(Arrays.asList(1,2,3),Arrays.asList(4,5,6))));
 	}
 	@Test
 	public void batchByTime2(){
@@ -68,7 +69,7 @@ public class BatchingTest {
 			assertThat(of(1,2,3,4,5, 6)
 							.map(n-> n==6? sleep(1) : n)
 							.groupedByTime(10,TimeUnit.MICROSECONDS)
-							.toList()
+							.to(Streamable::fromStream).toList()
 							.get(0)
 							,not(hasItem(6)));
 		}
@@ -89,7 +90,7 @@ public class BatchingTest {
 			assertThat(of(1,2,3,4,5, 6)
 							.map(n-> n==6? sleep(1) : n)
 							.groupedByTime(10,TimeUnit.MICROSECONDS)
-							.toList()
+							.to(Streamable::fromStream).toList()
 							.get(0)
 							,not(hasItem(6)));
 		}
@@ -120,7 +121,7 @@ public class BatchingTest {
 				.onePer(1, TimeUnit.SECONDS)
 				.map(seconds -> "hello!")
 				.peek(System.out::println)
-				.toList();
+				.to(Streamable::fromStream).toList();
 				
 	 assertTrue(System.currentTimeMillis()-start>1900);
 
@@ -134,7 +135,7 @@ public class BatchingTest {
 				.limit(3)
 				.map(seconds -> "hello!")
 				.peek(System.out::println)
-				.toList();
+				.to(Streamable::fromStream).toList();
 	 System.out.println("time = " +(System.currentTimeMillis()-start));
 	 assertTrue("failed time was " + (System.currentTimeMillis()-start),System.currentTimeMillis()-start>1600);
 
@@ -255,15 +256,15 @@ public class BatchingTest {
 
 	@Test
 	public void batchBySize3(){
-		System.out.println(of(1,2,3,4,5,6).grouped(3).collect(Collectors.toList()));
-		assertThat(of(1,2,3,4,5,6).grouped(3).collect(Collectors.toList()).size(),is(2));
+		System.out.println(of(1,2,3,4,5,6).grouped(3).to(Streamable::fromStream).collect(Collectors.toList()));
+		assertThat(of(1,2,3,4,5,6).grouped(3).to(Streamable::fromStream).collect(Collectors.toList()).size(),is(2));
 	}
 	@Test
 	public void batchBySizeAndTimeSizeCollection(){
 		
 		assertThat(of(1,2,3,4,5,6)
 						.groupedBySizeAndTime(3,10,TimeUnit.SECONDS,()->new ArrayList<>())
-						.toList().get(0)
+						.to(Streamable::fromStream).toList().get(0)
 						.size(),is(3));
 	}
 	@Test
@@ -272,22 +273,22 @@ public class BatchingTest {
 		Iterator<ArrayList<Integer>> it = of(1, 2, 3, 4, 5, 6)
 				.groupedBySizeAndTime(3, 10, TimeUnit.SECONDS, () -> new ArrayList<>()).iterator();
 		assertThat(ReactiveSeq.fromIterator(it)
-				.toList().get(0)
+				.to(Streamable::fromStream).toList().get(0)
 				.size(),is(3));
 	}
 	@Test
 	public void batchBySizeAndTimeSize(){
 		of(1,2,3,4,5,6)
-		.groupedBySizeAndTime(3,10,TimeUnit.SECONDS).collect(Collectors.toList());
+		.groupedBySizeAndTime(3,10,TimeUnit.SECONDS).to(Streamable::fromStream).collect(Collectors.toList());
 		List l = of(1,2,3,4,5,6)
 				.groupedBySizeAndTime(3,10,TimeUnit.SECONDS)
-				.toList();
+				.to(Streamable::fromStream).toList();
 
 		System.out.println(l);
 		
 		assertThat(of(1,2,3,4,5,6)
 						.groupedBySizeAndTime(3,10,TimeUnit.SECONDS)
-						.toList().get(0)
+						.to(Streamable::fromStream).toList().get(0)
 						.size(),is(3));
 	}
 	
@@ -296,7 +297,7 @@ public class BatchingTest {
 		
 		assertThat(of()
 						.groupedBySizeAndTime(3,10,TimeUnit.SECONDS)
-						.toList()
+						.to(Streamable::fromStream).toList()
 						.size(),is(0));
 	}
 	@Test
@@ -306,7 +307,7 @@ public class BatchingTest {
 			System.out.println(i);
 			List<ListX<Integer>> list = of(1,2,3,4,5,6)
 					.groupedBySizeAndTime(10,1,TimeUnit.MICROSECONDS)
-					.toList();
+					.to(Streamable::fromStream).toList();
 			
 			assertThat(list
 							.get(0)
@@ -320,7 +321,7 @@ public class BatchingTest {
 			System.out.println(i);
 			List<ArrayList<Integer>> list = of(1,2,3,4,5,6)
 					.groupedBySizeAndTime(10,1,TimeUnit.MICROSECONDS,()->new ArrayList<>())
-					.toList();
+					.to(Streamable::fromStream).toList();
 			
 			assertThat(list
 							.get(0)
@@ -336,7 +337,7 @@ public class BatchingTest {
 					.map(n-> n==6? sleep(1) : n)
 					.groupedBySizeAndTime(10,1,TimeUnit.MICROSECONDS)
 					
-					.toList();
+					.to(Streamable::fromStream).toList();
 			
 			assertThat(list
 							.get(0)
@@ -348,31 +349,31 @@ public class BatchingTest {
 	
 	@Test
 	public void batchBySizeSet(){
-		System.out.println("List = " + of(1,1,1,1,1,1).grouped(3,()->new TreeSet<>()).toList());
-		assertThat(of(1,1,1,1,1,1).grouped(3,()->new TreeSet<>()).toList().get(0).size(),is(1));
-		assertThat(of(1,1,1,1,1,1).grouped(3,()->new TreeSet<>()).toList().size(),is(1));
+		System.out.println("List = " + of(1,1,1,1,1,1).grouped(3,()->new TreeSet<>()).to(Streamable::fromStream).toList());
+		assertThat(of(1,1,1,1,1,1).grouped(3,()->new TreeSet<>()).to(Streamable::fromStream).toList().get(0).size(),is(1));
+		assertThat(of(1,1,1,1,1,1).grouped(3,()->new TreeSet<>()).to(Streamable::fromStream).toList().size(),is(1));
 	}
 	@Test
 	public void batchBySizeSetEmpty(){
 		
-		assertThat(of().grouped(3,()->new TreeSet<>()).toList().size(),is(0));
+		assertThat(of().grouped(3,()->new TreeSet<>()).to(Streamable::fromStream).toList().size(),is(0));
 	}
 	@Test
 	public void batchBySizeInternalSize(){
-		assertThat(of(1,2,3,4,5,6).grouped(3).collect(Collectors.toList()).get(0).size(),is(3));
+		assertThat(of(1,2,3,4,5,6).grouped(3).to(Streamable::fromStream).collect(Collectors.toList()).get(0).size(),is(3));
 	}
 	@Test
 	public void fixedDelay(){
 		SimpleTimer timer = new SimpleTimer();
 		
-		assertThat(of(1,2,3,4,5,6).fixedDelay(10000,TimeUnit.NANOSECONDS).collect(Collectors.toList()).size(),is(6));
+		assertThat(of(1,2,3,4,5,6).fixedDelay(10000,TimeUnit.NANOSECONDS).to(Streamable::fromStream).collect(Collectors.toList()).size(),is(6));
 		assertThat(timer.getElapsedNanoseconds(),greaterThan(60000l));
 	}
 	@Test
 	public void judder(){
 		SimpleTimer timer = new SimpleTimer();
 		
-		assertThat(of(1,2,3,4,5,6).jitter(10000).collect(Collectors.toList()).size(),is(6));
+		assertThat(of(1,2,3,4,5,6).jitter(10000).to(Streamable::fromStream).collect(Collectors.toList()).size(),is(6));
 		assertThat(timer.getElapsedNanoseconds(),greaterThan(20000l));
 	}
 	@Test
@@ -380,45 +381,45 @@ public class BatchingTest {
 		SimpleTimer timer = new SimpleTimer();
 		
 		
-		assertThat(of(1,2,3,4,5,6).debounce(1000,TimeUnit.SECONDS).collect(Collectors.toList()).size(),is(1));
+		assertThat(of(1,2,3,4,5,6).debounce(1000,TimeUnit.SECONDS).to(Streamable::fromStream).collect(Collectors.toList()).size(),is(1));
 		
 	}
 	@Test
 	public void debounceOk(){
-		System.out.println(of(1,2,3,4,5,6).debounce(1,TimeUnit.NANOSECONDS).toList());
-		assertThat(of(1,2,3,4,5,6).debounce(1,TimeUnit.NANOSECONDS).collect(Collectors.toList()).size(),is(6));
+		System.out.println(of(1,2,3,4,5,6).debounce(1,TimeUnit.NANOSECONDS).to(Streamable::fromStream).toList());
+		assertThat(of(1,2,3,4,5,6).debounce(1,TimeUnit.NANOSECONDS).to(Streamable::fromStream).collect(Collectors.toList()).size(),is(6));
 		
 	}
 	@Test
 	public void onePer(){
 		SimpleTimer timer = new SimpleTimer();
-		System.out.println(of(1,2,3,4,5,6).onePer(1000,TimeUnit.NANOSECONDS).collect(Collectors.toList()));
-		assertThat(of(1,2,3,4,5,6).onePer(1000,TimeUnit.NANOSECONDS).collect(Collectors.toList()).size(),is(6));
+		System.out.println(of(1,2,3,4,5,6).onePer(1000,TimeUnit.NANOSECONDS).to(Streamable::fromStream).collect(Collectors.toList()));
+		assertThat(of(1,2,3,4,5,6).onePer(1000,TimeUnit.NANOSECONDS).to(Streamable::fromStream).collect(Collectors.toList()).size(),is(6));
 		assertThat(timer.getElapsedNanoseconds(),greaterThan(600l));
 	}
 	@Test
 	public void xPer(){
 		SimpleTimer timer = new SimpleTimer();
-		System.out.println(of(1,2,3,4,5,6).xPer(6,1000,TimeUnit.NANOSECONDS).collect(Collectors.toList()));
-		assertThat(of(1,2,3,4,5,6).xPer(6,100000000,TimeUnit.NANOSECONDS).collect(Collectors.toList()).size(),is(6));
+		System.out.println(of(1,2,3,4,5,6).xPer(6,1000,TimeUnit.NANOSECONDS).to(Streamable::fromStream).collect(Collectors.toList()));
+		assertThat(of(1,2,3,4,5,6).xPer(6,100000000,TimeUnit.NANOSECONDS).to(Streamable::fromStream).collect(Collectors.toList()).size(),is(6));
 		assertThat(timer.getElapsedNanoseconds(),lessThan(60000000l));
 	}
 	@Test
 	public void batchByTime(){
-		assertThat(of(1,2,3,4,5,6).groupedByTime(1,TimeUnit.SECONDS).collect(Collectors.toList()).size(),is(1));
+		assertThat(of(1,2,3,4,5,6).groupedByTime(1,TimeUnit.SECONDS).to(Streamable::fromStream).collect(Collectors.toList()).size(),is(1));
 	}
 	@Test
 	public void batchByTimeSet(){
 		
-		assertThat(of(1,1,1,1,1,1).groupedByTime(1500,TimeUnit.MICROSECONDS,()-> new TreeSet<>()).toList().get(0).size(),is(1));
+		assertThat(of(1,1,1,1,1,1).groupedByTime(1500,TimeUnit.MICROSECONDS,()-> new TreeSet<>()).to(Streamable::fromStream).toList().get(0).size(),is(1));
 	}
 	@Test
 	public void batchByTimeInternalSize(){
-		assertThat(of(1,2,3,4,5,6).groupedByTime(1,TimeUnit.NANOSECONDS).collect(Collectors.toList()).size(),greaterThan(5));
+		assertThat(of(1,2,3,4,5,6).groupedByTime(1,TimeUnit.NANOSECONDS).to(Streamable::fromStream).collect(Collectors.toList()).size(),greaterThan(5));
 	}
 	@Test
 	public void batchByTimeInternalSizeCollection(){
-		assertThat(of(1,2,3,4,5,6).groupedByTime(1,TimeUnit.NANOSECONDS,()->new ArrayList<>()).collect(Collectors.toList()).size(),greaterThan(5));
+		assertThat(of(1,2,3,4,5,6).groupedByTime(1,TimeUnit.NANOSECONDS,()->new ArrayList<>()).to(Streamable::fromStream).collect(Collectors.toList()).size(),greaterThan(5));
 	}
 	
 
